logs/eggNOGfails/eggNOG_491790.log
Query name: /vortexfs1/omics/env-bio/collaboration/genome-streamlining/data/Proteins/AAA015-N04_proteins.faa
 Outfile: /vortexfs1/omics/env-bio/collaboration/genome-streamlining/data/eggNOGged/AAA015-N04_proteins_maNOG.txt

  File "/vortexfs1/home/ngermolus/eggnog-mapper/emapper.py", line 64
    print dbpath
               ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(dbpath)?
